Add Functional for Tags in right column

--- a/css/style.css
+++ b/css/style.css
@@ -111,4 +111,33 @@ body {
 .post-tags p {
   margin: 0 10px 0 0;
 }
+
+.sidebar .tags li {
+  display: inline-block;
+}
+
+.sidebar .tags li a {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+.sidebar .tags li a.tag-size-1 {
+  font-size: 15px;
+}
+
+.sidebar .tags li a.tag-size-2 {
+  font-size: 18px;
+}
+
+.sidebar .tags li a.tag-size-3 {
+  font-size: 20px;
+}
+
+.sidebar .tags li a.tag-size-4 {
+  font-size: 24px;
+}
+
+.sidebar .tags li a.tag-size-5 {
+  font-size: 28px;
+}
 /*# sourceMappingURL=style.css.map */
