--- a/sass/style.scss
+++ b/sass/style.scss
@@ -131,3 +131,33 @@ body {
     margin: 0 10px 0 0;
   }
 }
+
+.sidebar .tags li {
+  display: inline-block;
+
+  & a {
+    display: inline-block;
+    margin: 0 10px;
+
+
+    &.tag-size-1 {
+      font-size: 15px;
+    }
+
+    &.tag-size-2 {
+      font-size: 18px;
+    }
+
+    &.tag-size-3 {
+      font-size: 20px;
+    }
+
+    &.tag-size-4 {
+      font-size: 24px;
+    }
+
+    &.tag-size-5 {
+      font-size: 28px;
+    }
+  }
+}
